Bug 1681924 - add application/zip to extraMimeEntries to help recognize zip files, r=mak

Differential Revision: https://phabricator.services.mozilla.com/D100009